tests/valid_programs/fmt_strings6.duck
use go "fmt";

fn main() {
    let x: String = f"{f"nested f string"}";
    go {
        fmt.Println(x)
    }
}
