tests/invalid_programs/types/add_two_strings.duck
fun x() {
    let x: String = 5;
    let y: String = 5;
    x + y;
}
